# AITK-519-llm-train-write-support-queries

./: .gitignore  README.md  data_analysis.ipynb  data_analysis.py  data_splited.py  dataset_prepare.py  datasets_prepare.py  geting_short_queries.py  llm_train.py  nohup.out  pyproject.toml  query2es.py  re_test.py  requirements.txt  validator_testing.py
data_light/: example.json  queries_2020_14.feather
data_with_length/: .~lock.queries2024_short_exmpl1000.csv#  queries2024_short_exmpl1000.csv
examples/: data_example_2024.json  queries_answers_dataset_not_lem_test.txt  train_dataset_example.txt  train_dataset_example_with_false.txt  train_results.txt  whrite_query.json  whrite_query2.json
src/: storage.py
test_results/: val_results.csv  val_results_WrSupp_val_queries_2020_7.txt_240624.csv  val_results_WrSupp_val_queries_2020_7.txt_240624.xlsx  val_results_WrSupp_val_queries_2020_7.txt_240625.csv  val_results_WrSupp_val_queries_2020_7.txt_240625.xlsx  val_results_WrSupp_val_queries_2020_7.txt_240626.csv  val_results_WrSupp_val_queries_2020_7.txt_240626.xlsx  val_results_WrSupp_val_queries_2020_7.txt_240628.csv  val_results_WrSupp_val_queries_2020_7.txt_240628.xlsx  val_results_WrSupp_val_queries_2020_7.txt_240701.csv  val_results_WrSupp_val_queries_2020_7.txt_240701.xlsx  val_results_WrSupp_val_queries_2020_7.txt_3f.csv  val_results_WrSupp_val_queries_2020_7.xlsx  val_results_WrSupp_val_queries_2020_7_240621.xlsx  val_results_WrSupp_val_queries_2020_7_3f.xlsx  val_results_bss_val_queries_2020_7_3f.txt.csv  val_results_bss_val_queries_2020_7_3f.xlsx  (+6 more)
