[tool.poetry]
name = "aitk-519-llm-train-write-support-queries"
version = "0.1.0"
description = ""
authors = ["nichnikov <a.nichnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
openpyxl = "3.1.2"
pyarrow = "16.1.0"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
